06-pod-invalid-schema/.test/pod-basic-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-basic
spec:
  containers:
    - name: my-nginx-container
      image: nginx
