06-pod-invalid-schema/.test/pod-missing-image-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-missing-image
spec:
  containers:
    - name: nginx
      image: nginx
