06-pod-invalid-schema/.test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-mutate-pod-invalid-schema
spec:
  concurrent: false
  steps:
    - name: create mutating policy
      use:
        template: ../../fixtures/create-policy-and-wait-ready.yaml
        with:
          bindings:
          - name: file
            value: ../mutating-policy.yaml
          - name: kind
            value: MutatingPolicy
          - name: name
            value: mutate-pod-invalid-schema

    - name: create pod with missing image field and verify mutation
      try:
        - apply:
            file: pod-missing-image.yaml
        - assert:
            file: pod-missing-image-assert.yaml

    - name: create pod with valid schema and verify it is not mutated
      try:
        - apply:
            file: pod-basic.yaml
        - assert:
            file: pod-basic-assert.yaml
